+ about page complete + javascript in every pages + add z-index to fix navbar on phone

--- a/pages/about/aboutstyle.css
+++ b/pages/about/aboutstyle.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: rgb(17, 17, 17)
+    background-color: rgb(17, 17, 17);
 }
 
 /* headers */
@@ -93,7 +93,178 @@ nav p {
 
 /* end of headers */
 
-/* navbar responsive */
+/* aboutme main page */
+.mainpage {
+    text-align: center;
+    display: block;
+    margin: 100px 100px;
+    font-family: "montserrat", sans-serif;
+    color: white;
+    font-size: 20px;
+}
+
+input {
+    display: none;
+}
+
+.aboutbtn {
+    width: 100px;
+}
+
+/* end of aboutme main page */
+
+/* aboutme */
+.titleabout {
+    text-shadow: 5px 5px black;
+    margin: 10px;
+    animation: fromabove 1s forwards;
+    transition: all .5s ease;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+}
+
+.lineabout {
+    position: relative;
+    display: block;
+    animation: slide-right 1s forwards;
+    transition: all .5s ease;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+}
+
+/* end of about me */
+
+/* hobbies */
+.titlehobbies {
+    text-shadow: 5px 5px black;
+    margin: 10px;
+    animation: fromabove 1.5s forwards;
+    transition: all .5s ease;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+}
+
+.linehobbies {
+    position: relative;
+    display: block;
+    animation: slide-left 1s forwards;
+    transition: all .5s ease;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+}
+/* end of hobbies */
+
+/* personality */
+.titlepersonality {
+    text-shadow: 5px 5px black;
+    margin: 10px;
+    animation: fromabove 2s forwards;
+    transition: all .5s ease;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+}
+
+.linepersonality {
+    position: relative;
+    display: block;
+    animation: slide-right 1s forwards;
+    transition: all .5s ease;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+}
+
+.linepersonality a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    font-style: italic;
+    transition: all .5s ease;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+}
+
+.linepersonality a:hover {
+    font-size: 22px;
+    text-shadow: 5px 5px black;
+}
+/* end of personality */
+
+/* life description */
+.titlelife {
+    text-shadow: 5px 5px black;
+    margin: 10px;
+    animation: fromabove 2.5s forwards;
+    transition: all .5s ease;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+}
+
+.linelife {
+    position: relative;
+    display: block;
+    animation: slide-left 1s forwards;
+    transition: all .5s ease;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+}
+
+/* end of life description */
+
+/* animations */
+@keyframes slide-left {
+    0% {
+        transform: translateX(-900px);
+        opacity: 0;
+    }
+    80% {
+        transform: translateX(30px);
+        opacity: 0.8;
+    }
+    90% {
+        transform: translateX(-10px);
+        opacity: 0.9;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slide-right {
+    0% {
+        transform: translateX(900px);
+        opacity: 0;
+    }
+    
+    80% {
+        transform: translateX(-30px);
+        opacity: 0.8;
+    }
+    
+    90% {
+        transform: translateX(10px);
+        opacity: 0.9;
+    }
+    
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes fromabove {
+    0% {
+        transform: translateY(-900px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+/* end of animation */
+
+/* responsives */
 @media (max-width: 952px) {
     nav ul li a {
         font-size: 16px;
@@ -101,12 +272,17 @@ nav p {
 }
 
 @media (max-width: 858px) {
+    .mainpage {
+        margin: 80px 30px;
+    }
+
     .checkbtn {
         display: block;
     }
 
     ul {
         position: fixed;
+        z-index: 10;
         width: 100%;
         height: 100%;
         background: rgba(46, 46, 46, 0.601);
