--- a/pages/misc/miscstyle.css
+++ b/pages/misc/miscstyle.css
@@ -107,6 +107,7 @@ nav p {
 
     ul {
         position: fixed;
+        z-index: 10;
         width: 100%;
         height: 100%;
         background: rgba(46, 46, 46, 0.601);
