--- a/style.css
+++ b/style.css
@@ -196,6 +196,7 @@ span.luv {
 
     ul {
         position: fixed;
+        z-index: 10;
         width: 100%;
         height: 100%;
         background: rgba(46, 46, 46, 0.601);
